# sdk

./: .gitignore  .gitmodules  README.md
cpp/common/visualization/: serialization.hpp  visualizer.cpp  visualizer.hpp
cpp/k4a/: CMakeLists.txt  record.cpp
cpp/orbbec/: CMakeLists.txt  record.cpp
cpp/realsense/: CMakeLists.txt  record.cpp
cpp/visualization/: helpers.hpp  serialization.cpp  serialization.hpp  visualizer.cpp  visualizer.hpp
integrations/ros2/depthai/python/: requirements.txt
integrations/ros2/depthai/python/launch/: mapping.py
integrations/ros2/depthai/python/spectacularai_depthai/: ros2_node.py
python/: run_sai_cli.py
python/cli/: calibrate.py  sai_cli.py  smooth.py
python/cli/calibrate/: calibrate.py
python/cli/calibrate_frd/: calibrate_frd.py
python/cli/convert/: binary.py  convert.py  tum.py
python/cli/diagnose/: diagnose.py  gnss.py  html.py  sensors.py
python/cli/process/: process.py
python/cli/process/test/: sparse_pc.ply  transforms.json
python/cli/process/test/colmap/sparse/0/: cameras.txt  images.txt  points3D.txt
python/cli/record/: oak.py  record.py
python/cli/visualization/: serialization.py  vio_visu.py  visualizer.py
python/cli/visualization/visualizer_renderers/: mesh.py  point_cloud.py  point_cloud.vert  renderers.py  util.py
